package br.com.devlife.domain;

import br.com.devlife.domain.enums.NivelCargo;
import br.com.devlife.domain.enums.NivelHabilidade;

import java.util.Collections;
import java.util.Map;
import java.util.Objects;

public final class Projeto {
    private final String nome;
    private final String descricao;
    private final int xpGanho;
    private final double dinheiroGanho;
    private final int energiaCusto;
    private final int sanidadeCusto;
    private final int networkingGanho;
    private final Map<String, NivelHabilidade> requisitos;
    private final int duracaoEmDias; // NOVO ATRIBUTO
    private final NivelCargo nivelRequerido; // NOVO ATRIBUTO

    public Projeto(String nome, String descricao, int xpGanho, double dinheiroGanho, int energiaCusto, int sanidadeCusto, int networkingGanho, int duracaoEmDias, NivelCargo nivelRequerido, Map<String, NivelHabilidade> requisitos) {
        this.nome = Objects.requireNonNull(nome, "O nome não pode ser nulo.");
        this.descricao = Objects.requireNonNull(descricao, "A descrição não pode ser nula.");
        this.xpGanho = xpGanho;
        this.dinheiroGanho = dinheiroGanho;
        this.energiaCusto = energiaCusto;
        this.sanidadeCusto = sanidadeCusto;
        this.networkingGanho = networkingGanho;
        this.duracaoEmDias = duracaoEmDias;
        this.nivelRequerido = nivelRequerido;
        this.requisitos = (requisitos != null) ? Collections.unmodifiableMap(requisitos) : Collections.emptyMap();
    }

    // Getters existentes (sem alteração)
    public String getNome() { return nome; }
    public String getDescricao() { return descricao; }
    public int getXpGanho() { return xpGanho; }
    public double getDinheiroGanho() { return dinheiroGanho; }
    public int getEnergiaCusto() { return energiaCusto; }
    public int getSanidadeCusto() { return sanidadeCusto; }
    public int getNetworkingGanho() { return networkingGanho; }
    public Map<String, NivelHabilidade> getRequisitos() { return requisitos; }

    // NOVOS GETTERS
    public int getDuracaoEmDias() { return duracaoEmDias; }
    public NivelCargo getNivelRequerido() { return nivelRequerido; }

    @Override
    public String toString() {
        return "Projeto{" + "nome='" + nome + '\'' + ", xpGanho=" + xpGanho + ", dinheiroGanho=" + dinheiroGanho + '}';
    }
    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Projeto projeto = (Projeto) o;
        return nome.equals(projeto.nome);
    }
    @Override
    public int hashCode() {
        return Objects.hash(nome);
    }
}