package br.com.devlife.domain.enums;

public enum TipoAtividade {
    SAUDE,
    SANIDADE
}